# Agentic-Memory

./: LICENSE  README.md  pyproject.toml  requirements.txt
agent/: conversation.py  core.py
api/: app.py  dependencies.py  routes.py
cli/: main.py
config/: logging_config.py  settings.py
core/: exceptions.py
core/interfaces/: memory.py  provider.py
core/models/: memory.py  state.py
docs/: api.md  architecture.md
memory/: __init__.py  episodic.py  procedural.py  semantic.py  working.py
providers/: base.py  weaviate.py
scripts/: init_db.py  load_documents.py  reset_memory.py
tests/: conftest.py
tests/test_integration/: test_full_pipeline.py
tests/test_memory/: test_core.py  test_episodic.py  test_working.py
utils/: formatters.py  helpers.py
