[project]
name = "agentic-memory"
version = "0.1.0"
description = "Agentic Memory System for LLMs"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "weaviate-client>=4.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
agentic-memory = "cli.main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true